[gd_scene load_steps=3 format=3 uid="uid://bah0cloqblp5n"]

[ext_resource type="Script" path="res://src/creeps/wave_spawner.gd" id="1_isnnd"]
[ext_resource type="PackedScene" uid="uid://b80b85lbixydk" path="res://src/creeps/creep_spawner.tscn" id="2_rvsq0"]

[node name="WaveSpawner" type="Node" node_paths=PackedStringArray("_creep_spawner")]
script = ExtResource("1_isnnd")
_creep_spawner = NodePath("CreepSpawner")

[node name="CreepSpawner" parent="." instance=ExtResource("2_rvsq0")]

[connection signal="all_creeps_spawned" from="CreepSpawner" to="." method="_on_creep_spawner_all_creeps_spawned"]
